unpackaged/main/default/objects/Milestone1_Settings__c/fields/Auto_Follow_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>Auto_Follow_Complete_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Task is marked 'Complete', Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</description>
    <inlineHelpText>When a Task is marked 'Complete', Automatically unsubscribe the Assigned User from the Chatter Feed for the Task.</inlineHelpText>
    <label>Auto UnFollow A Complete Task</label>
    <type>Checkbox</type>
</CustomField>