unpackaged/main/default/objects/Milestone1_Settings__c/fields/Auto_Follow_Task__c.field-meta.xml
<CustomField>
    <fullName>Auto_Follow_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</description>
    <inlineHelpText>When a Task is Assigned to a User, automatically subscribe the user to follow the task.</inlineHelpText>
    <label>Auto Follow A Task</label>
    <type>Checkbox</type>
</CustomField>