unpackaged/main/default/objects/Milestone1_Settings__c/fields/Report_Id_Blocked_Tasks_by_Project__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_Blocked_Tasks_by_Project__c</fullName>
    <label>Report Id: Blocked Tasks by Project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>