unpackaged/main/default/objects/Milestone1_Settings__c/fields/Report_Id_My_Blocked_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_My_Blocked_Tasks__c</fullName>
    <label>Report Id: My Blocked Tasks</label>
    <length>15</length>
    <type>Text</type>
</CustomField>