unpackaged/main/default/objects/Milestone1_Settings__c/fields/Report_Id_My_Tasks_By_Priority_Project__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_My_Tasks_By_Priority_Project__c</fullName>
    <label>Report Id: My Tasks By Priority, Project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>