unpackaged/main/default/objects/Milestone1_Settings__c/fields/Report_Id_My_Tasks_By_Project_Milesto__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_My_Tasks_By_Project_Milesto__c</fullName>
    <label>Report Id: My Tasks By Project + Milesto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>