unpackaged/main/default/objects/Milestone1_Settings__c/fields/Report_Id_Task_Status_By_Project__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_Task_Status_By_Project__c</fullName>
    <label>Report Id: Task Status By Project</label>
    <length>15</length>
    <type>Text</type>
</CustomField>